objects/EE_Integration_Archive__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>EE_Integration_Archives</relationshipLabel>
        <relationshipName>EE_Integration_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EE_Integration_Archives</relationshipLabel>
        <relationshipName>EE_Integration_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>EE_Integration_Archives</relationshipLabel>
        <relationshipName>EE_Integration_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Created_Date__c</fullName>
        <label>Source Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubExpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubExpo</label>
        <referenceTo>SubExpo__c</referenceTo>
        <relationshipLabel>EE_Integration_Archives</relationshipLabel>
        <relationshipName>EE_Integration_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Created_Date__c</fullName>
        <label>Target Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Id__c</fullName>
        <label>Target Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EE_Integration_Archive</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event__c</columns>
        <columns>Campaign__c</columns>
        <columns>Contact__c</columns>
        <columns>Target_Id__c</columns>
        <columns>Product__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EE_Integration_Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>